@@ -5,6 +5,7 @@
 2012-03-27 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added selected criteria informations on search form.
 	* Refactor: Externalized setup css styles.
+	* Fix: Mistakes on files generated url
 
 2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
 	* Feature: Add TS configuration: displayList.renderOnlySearchedFileFormats
